--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ARouterJavaWanAndroid</string>
+    <string name="app_name">JavaWanAndroid</string>
 
 
     <string name="home">首页</string>
